CMAKE_MINIMUM_REQUIRED (VERSION 2.8 FATAL_ERROR) 

PROJECT (point_changer)          
MESSAGE ( STATUS ${CMAKE_PROJECT_NAME} )

SET(COMPILE_FLAGS "-std=c++11")

FIND_PACKAGE (PCL 1.7 REQUIRED)
FIND_PACKAGE (libLAS REQUIRED)

INCLUDE_DIRECTORIES(
    ${PCL_INCLUDE_DIRS}
    )
include_directories("${PROJECT_SOURCE_DIR}/include")


LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})


ADD_DEFINITIONS(${COMPILE_FLAGS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

ADD_EXECUTABLE (pcd_exam_test pcd_exam.cpp)

TARGET_LINK_LIBRARIES(pcd_exam_test ${PCL_LIBRARIES} ${libLAS_LIBRARIES})

